--- a/static/css/view_book.css
+++ b/static/css/view_book.css
@@ -1,32 +1,36 @@
 /* styles.css */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #000000f9;
     margin: 0;
     padding: 0;
 }
 
-.container {
+.new_container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
+    background-image: radial-gradient(at top right, #002125 0%, #01141D 50%);
+    margin-top: 50px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgb(255, 254, 254);
 }
 
 h1 {
-    color: #333;
+    color: #ececec;
     text-align: center;
     margin-bottom: 20px;
 }
 
 form {
     margin-bottom: 20px;
+    color: white;
 }
 
 label {
     font-weight: bold;
+    margin-bottom: 10px;
 }
 
 input[type="text"] {
@@ -36,6 +40,8 @@ input[type="text"] {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+    background: transparent;
+    color: white;
 }
 
 button[type="submit"],
@@ -55,8 +61,9 @@ button[type="submit"]:hover,
 
 .table-container {
     overflow-x: auto; /* Make the container horizontally scrollable */
-    max-width: calc(100% - 40px); /* Adjust max-width as needed */
+    max-width: calc(100% - 20px); /* Adjust max-width as needed */
     margin: 0 auto; /* Center the container */
+    color: white;
 }
 
 table {
@@ -76,12 +83,17 @@ form {
 }
 /* Responsive Styles */
 @media screen and (max-width: 600px) {
-    .container {
+    .new_container {
         padding: 10px;
+        margin-top: 10px;
     }
     form {
         margin-bottom: 20px;
         display: flex;
         flex-direction: column;
     }
+    button[type="submit"],
+#searchButton{
+    width: 100%;
+}
 }
