--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -17,7 +17,7 @@
           <li><a href="{{ url_for('home') }}">Home</a></li>
           <li><a href="{{ url_for('add_book_route') }}">Add Book</a></li>
           <li><a href="{{ url_for('view_book') }}">View Book</a></li>
-          <li><a href="{{ url_for('about') }}">Blog</a></li>
+          <li><a href="{{ url_for('blog') }}">Blog</a></li>
           <li><a href="{{ url_for('contact') }}">Contact</a></li>
           <li><a href="/logout">Logout</a></li>
         </ul>
