--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../static/css/login.css">
 </head>
 <body>
+    <div class="main_container">
+        <h1>Library Management System</h1>
     <div class="container">
         <h1>Login</h1>
         <form action="{{ url_for('login') }}" method="POST">
@@ -16,8 +18,8 @@
             <button type="submit">Login</button>
         </form>
         <p>Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
-        <p>Forgot your password? <a href="{{ url_for('forgot_password') }}">Reset it here</a></p>
 
+    </div>
     </div>
 </body>
 </html>
