--- a/templates/register.html
+++ b/templates/register.html
@@ -11,14 +11,23 @@
     <link rel="stylesheet" href="../static/css/register.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Sign Up</h1>
-      <form action="/register" method="POST">
-        <!-- Ensure method is set to POST -->
-        <input type="text" name="username" placeholder="Username" required />
-        <input type="password" name="password" placeholder="Password" required />
-        <button type="submit">Sign Up</button>
-      </form>
+    <div class="main_container">
+      <h1>Library Management System</h1>
+      <div class="container">
+        <h1>Sign Up</h1>
+        <form action="/register" method="POST">
+          <!-- Ensure method is set to POST -->
+          <input type="text" name="username" placeholder="Username" required />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            required
+          />
+          <button type="submit">Sign Up</button>
+          <p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+        </form>
+      </div>
     </div>
   </body>
 </html>
