--- a/templates/view_book.html
+++ b/templates/view_book.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Book</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <link rel="stylesheet" href="../static/css/view_book.css">
 </head>
 <body>
-    <div class="container">
+    <nav id="navbar">
+        <ul>
+          <li><a href="{{ url_for('home') }}">Home</a></li>
+          <li><a href="{{ url_for('add_book_route') }}">Add Book</a></li>
+          <li><a href="{{ url_for('view_book') }}">View Book</a></li>
+          <li><a href="{{ url_for('blog') }}">Blog</a></li>
+          <li><a href="{{ url_for('contact') }}">Contact</a></li>
+          <li><a href="/logout">Logout</a></li>
+        </ul>
+      </nav>
+    <div class="new_container">
         <form action="{{ url_for('delete_book_route') }}" method="post">
             <label for="book_id">Enter Book ID to Delete:</label>
             <input type="text" id="book_id" name="book_id" required />
