--- a/templates/register.html
+++ b/templates/register.html
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="../static/css/register.css" />
   </head>
   <body>
+    <h1>Library Management System</h1>
     <div class="main_container">
-      <h1>Library Management System</h1>
+      <div class="register_image">
+        <img src="https://static.vecteezy.com/system/resources/previews/003/689/231/original/online-registration-or-sign-up-login-for-account-on-smartphone-app-user-interface-with-secure-password-mobile-application-for-ui-web-banner-access-cartoon-people-illustration-vector.jpg">
+
+</div>
       <div class="container">
         <h1>Sign Up</h1>
         <form action="/register" method="POST">
