--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,3 +1,53 @@
 .book-card p{
-  font-size: 13px;
+  font-size: 15px;
+}
+.book-card .image {
+  width: 100%;
+  height: 250px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+}
+.book-card {
+  background-color: #000000;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgb(255, 255, 255);
+  width: 463px;
+  height: 251px;
+  padding: 20px;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
+  transition: transform 0.3s ease;
+}
+.book-card .book-info{
+  margin-left: 30px;
+}
+
+@media screen and (max-width: 600px){
+  .book-card p{
+    font-size: 13px;
+  }
+  .book-card .image {
+    width: 240%;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+  }
+  .book-card {
+    background-color: #000000;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgb(255, 255, 255);
+    width: 463px;
+    height: 251px;
+    padding: inherit;
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+    transition: transform 0.3s ease;
+  }
+  .book-card .book-info{
+    margin-left: 10px;
+  }
 }
