--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -3,12 +3,14 @@
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
-    background-image: radial-gradient(at top right, #002125cf 0%, #01141D 50%);
+    /* background-image: radial-gradient(at top right, #002125cf 0%, #01141D 50%); */
     margin-top: 50px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgb(255, 254, 254);
 }
-
+body{
+    background-color: white;
+}
 header {
     text-align: center;
     margin-bottom: 20px;
@@ -20,7 +22,7 @@ header img {
 }
 
 h1 ,p,label{
-    color: #ffffff;
+    color: #000000;
     margin-bottom: 10px;
 }
 p{
@@ -54,7 +56,9 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #0056b3;
 }
-
+footer p{
+    color: white;
+}
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
