--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,10 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #030210;
+    background-color: #faf9ff;
     margin: 0;
     padding: 0;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -12,25 +13,38 @@ body {
       width: 100%;
       height: 90vh;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      /* flex-direction: column; */
+      justify-content: space-evenly;
       align-items: center;
   }
+  .main_container img{
+      width: 50%;
+  }
   .main_container h1{
-      color:aqua;
+      color:rgb(8, 8, 8);
+  }
+  .main_container .register_image{
+      width: 40%;
+  }
+  .register_image img{
+      width: 100%;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 200px;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
   }
   .container {
-    max-width: 400px;
-    height: 300px;
+    width: 30%;
+    height: 400px;
     /* margin: 100px auto; */
     padding: 20px;
     background-color: #fff;
-    border-radius: 16px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: transparent;
-    background-image: radial-gradient(at top right, #00e1ff24 0%, #01141d 50%);
-    box-shadow: 0 0 10px rgb(255, 254, 254);
-    color: whitesmoke;
+    border-radius: 5px;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    /* background-color: transparent; */
+    /* background-image: radial-gradient(at top right, #00e1ff24 0%, #01141d 50%); */
+    /* box-shadow: 0 0 10px rgb(1, 1, 1); */
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,11 +55,11 @@ body {
     transition: 0.7s;
     /* transition: transform 0.3s ease-in;   */
     /* color: black; */
-    background-image: radial-gradient(at top right, #01141d 0%, #00e1ff24 50%);
+    /* background-image: radial-gradient(at top right, #01141d 0%, #00e1ff24 50%); */
   }
   h1 {
     text-align: center;
-    color: #ffffff;
+    color: #000000;
   }
   form {
     margin-top: 20px;
@@ -60,7 +74,7 @@ body {
     border-radius: 5px;
     box-sizing: border-box;
     background: transparent;
-    color: white;
+    color: rgb(0, 0, 0);
   }
   button {
     background-color: #007bff;
@@ -109,11 +123,17 @@ body {
   }
   /* Responsive styles */
   @media screen and (max-width: 600px) {
-    .container {
-      width: 90%;
-      margin: 50px auto;
-      height: 370px;
-      padding: 10px;
-    }
+      .container {
+          width: 90%;
+          margin: -50px auto;
+          height: 370px;
+          padding: 10px;
+        }
+      .main_container{
+          flex-direction: column-reverse
+      }
+      .main_container .register_image {
+          width: 100%;
+      }
   }
   
