--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -31,7 +31,19 @@ p{
 form {
     margin-top: 20px;
 }
-
+header {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 20px;
+    box-shadow: 0 0 10px rgb(255, 255, 255);
+    margin-top: 20px;
+    border-radius: 25px;
+}
+header h1{
+    margin: 0;
+    color: black;
+}
 input[type="text"],
 input[type="email"],
 textarea {
